prepare graph for custom_component creation and simplement graph prototype
* long press on any item in sensor menu will show a graph (the same graph)
* every 30 s a new value is added to the graph
* graph stuff for custom component in graph.h and graph.cpp
* use homeThing string to find custom extensions

--- a/esphomeRemote/sharedRemoteConfig.yaml
+++ b/esphomeRemote/sharedRemoteConfig.yaml
@@ -323,6 +323,11 @@ interval:
     then:
     - lambda: |-
         idleTick();
+  # REMOVE LATER test graph data 
+  - interval: 30s
+    then:
+    - lambda: |-
+        addNewValue();
   - interval: 40ms
     then:
     - lambda: |-
