--- a/homeThing/sharedRemoteConfig.yaml
+++ b/homeThing/sharedRemoteConfig.yaml
@@ -406,6 +406,9 @@ homeThing:
   id: homeThingMenu
   media_players: media_group_component
   lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
   display: my_display
   on_redraw:
     then:
