--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -2,17 +2,6 @@ esphome:
   name: fireremote
   platform: ESP32
   board: m5stack-fire
-  includes:
-    - homeThing/MenuGlobals.h
-    - homeThing/MenuTitle.h
-    - homeThing/FriendlyNameEntity.h
-    - homeThing/TextHelpers.h
-    - homeThing/DisplayUpdateInterface.h
-    - homeThing/esphomeRemote.h
-    - homeThing/esphomeRemoteNowPlayingMenu.h
-    - homeThing/esphomeRemote3Button.h
-    - homeThing/esphomeRemoteFireLight.h
-    - homeThing/esphomeRemoteCommon.h
 
 substitutions:
   boot_name: '"Fire Remote <3"'
@@ -34,6 +23,7 @@ substitutions:
   now_playing_max_lines: "5"
   draw_now_playing_menu: "true"
   draw_battery_level: "true"
+  dark_mode: "true"
   draw_volume_level: "false"
   draw_shuffle_disabled: "false"
   draw_header_time: "true"
@@ -48,7 +38,6 @@ substitutions:
   inc_brightness_step: "10"
   dec_color_temperature_step: "10"
   inc_color_temperature_step: "10"
-  dark_mode: "true"
   keep_states_in_sync: "false"
 
 <<: !include homeThing/sharedRemoteConfig.yaml
@@ -75,12 +64,13 @@ ip5306:
     on_value :
       then:
         - lambda: |-
-            if(id(batteryPercent).state > previousBatteryLevel && !charging) {
-                charging = true;
-            } else if(id(batteryPercent).state <= previousBatteryLevel && charging) {
-                charging = false;
-            }
-            previousBatteryLevel = id(batteryPercent).state;
+            ESP_LOGD("TEST", "Battery Percent");
+            // if(id(batteryPercent).state > previousBatteryLevel && !charging) {
+            //     charging = true;
+            // } else if(id(batteryPercent).state <= previousBatteryLevel && charging) {
+            //     charging = false;
+            // }
+            // previousBatteryLevel = id(batteryPercent).state;
   charger_connected:
     internal: true
     id: connected
@@ -88,17 +78,17 @@ ip5306:
       then:
         - lambda: |-
             ESP_LOGD("TEST", "charging");
-            if (charging == false) {
-              charging = true;
-            }
+            // if (charging == false) {
+            //   charging = true;
+            // }
         
     on_release:
       then:
         - lambda: |-
             ESP_LOGD("TEST", "not charging");
-            if (charging == true) {
-              charging = false;
-            }
+            // if (charging == true) {
+            //   charging = false;
+            // }
   charge_full:
     id: full
     internal: true
@@ -115,6 +105,12 @@ deep_sleep:
   wakeup_pin_mode: INVERT_WAKEUP
 
 binary_sensor:
+  - platform: status
+    id: api_connected
+    internal: true
+  - platform: template
+    id: wifi_connected
+    internal: true
   - platform: gpio
     id: M5_BtnA
     pin:
@@ -123,7 +119,7 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressLeft();
+            id(homeThingMenu)->rotaryScrollCounterClockwise(0);
   - platform: gpio
     id: M5_BtnB
     pin:
@@ -132,7 +128,7 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressSelect();
+           id(homeThingMenu)->buttonPressSelect();
   - platform: gpio
     id: M5_BtnC
     pin:
@@ -141,7 +137,7 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressRight();
+            id(homeThingMenu)->rotaryScrollClockwise(0);
 
 # We can still control the backlight independently
 switch:
@@ -162,6 +158,20 @@ switch:
     internal: true
 
 light:
+  - platform: fastled_clockless
+    chipset: SK6812
+    pin: GPIO15
+    num_leds: 10
+    rgb_order: GRB
+    id: side_light
+    name: ${friendly_name} Remote Light"
+    restore_mode: ALWAYS_OFF
+    default_transition_length: 0s
+    effects:
+      - addressable_rainbow:
+          name: Rainbow Effect
+          speed: 20
+          width: 15
   - platform: homeassistant_light_group
     id: light_bathroom_lights
     entity_id: light.bathroom_lights
@@ -182,25 +192,53 @@ light:
     id: light_office_lamp
     entity_id: light.office_lamp
     name: Office Lamp
-  - platform: fastled_clockless
-    chipset: SK6812
-    pin: GPIO15
-    num_leds: 10
-    rgb_order: GRB
-    id: side_light
-    name: ${friendly_name} Remote Light"
-    restore_mode: ALWAYS_OFF
-    default_transition_length: 0s
-    effects:
-      - addressable_rainbow:
-          name: Rainbow Effect
-          speed: 20
-          width: 15
 
 spi:
   clk_pin: 18
   mosi_pin: 23
   miso_pin: 19
+
+homeThing:
+  id: homeThingMenu
+  settings:
+    mode: 3_button
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    wifi: wifi_connected
+    api: api_connected
+  display_state:
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+    # large_font_size: "24"
+    # medium_font_size: "20"
+    # small_font_size: "18"
+    # icon_size: "24"
+    # icon_size_large: "28"
+    header_height: 24
+    margin_size: 8
+    slider_margin_size: 6
+    scroll_bar_width: 8
+    bottom_bar_margin: 8
+    now_playing_max_lines: 5
+    draw_now_playing_bottom_menu: true
+    draw_battery_level: false
+    dark_mode: true
+    draw_volume_level: false
+    draw_shuffle_disabled: false
+    draw_header_time: true
 
 display:
   - platform: ili9341
@@ -212,12 +250,12 @@ display:
     id: my_display
     update_interval: 3600s 
     lambda: |-
-      manageLight();
-      if (idleTime < 0) {
-        ESP_LOGD("drawing menu", "turning on");
-        id(backlight).turn_on();
-        idleTime = 0;
-      }
-      draw_menu_screen();
+      // manageLight();
+      // if (idleTime < 0) {
+      //   ESP_LOGD("drawing menu", "turning on");
+      //   id(backlight).turn_on();
+      //   idleTime = 0;
+      // }
+      id(homeThingMenu)->draw_menu_screen();
       return;
       
