--- a/homething-lilygo.yaml
+++ b/homething-lilygo.yaml
@@ -284,6 +284,29 @@ spi:
   clk_pin: GPIO18
   mosi_pin: GPIO19
 
+homeThing:
+  id: homeThingMenu
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    wifi: wifi_connected
+    api: api_connected
+  display_state:
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+
 display:
   - platform: st7789v
     model: TTGO_TDisplay_135x240
