--- a/m5stickcplus.yaml
+++ b/m5stickcplus.yaml
@@ -1,15 +1,5 @@
 esphome:
   name: m5stickc
-  includes:
-    - homeThing/MenuGlobals.h
-    - homeThing/MenuTitle.h
-    - homeThing/FriendlyNameEntity.h
-    - homeThing/TextHelpers.h
-    - homeThing/DisplayUpdateInterface.h
-    - homeThing/esphomeRemote.h
-    - homeThing/esphomeRemoteNowPlayingMenu.h
-    - homeThing/esphomeRemote2Button.h
-    - homeThing/esphomeRemoteCommon.h
 
 esp32:
   board: m5stick-c
@@ -86,16 +76,7 @@ sensor:
     axp192_id: axp
     id: batteryPercent
     type: battery_power
-  - platform: template
-    id: display_update_tick
-    filters:
-      - debounce: 0.02s
-    on_value :
-      then:
-        - lambda: |-
-            if(idleTime < 2) {
-              displayUpdate.updateDisplay(true);
-            }
+
 # internal LED
 light:
   - platform: homeassistant_light_group
@@ -141,6 +122,12 @@ output:
     id: axp_ldo3  
 
 binary_sensor:
+  - platform: status
+    id: api_connected
+    internal: true
+  - platform: template
+    id: wifi_connected
+    internal: true
   - platform: axp192
     axp192_id: axp
     type: charge_indicate
@@ -149,7 +136,8 @@ binary_sensor:
     on_state:
       then:
         lambda: |-
-          charging = x;
+          // charging = x;
+          int i = 0;
   - platform: gpio
     pin:
       number: GPIO37
@@ -158,7 +146,7 @@ binary_sensor:
     on_press:
       then:
         lambda: |-
-            buttonPressRight();
+            id(homeThingMenu)->rotaryScrollClockwise(0);
             auto call = id(led1).turn_on();
             call.set_transition_length(0);
             call.perform();
@@ -174,7 +162,7 @@ binary_sensor:
     on_press:
       then:
         lambda: |-
-            buttonPressSelect();
+            id(homeThingMenu)->buttonPressSelect();
             auto call = id(led1).turn_on();
             call.set_transition_length(0);
             call.perform();
@@ -196,6 +184,7 @@ switch:
     axp192_id: axp
     output: ldo3
     name: LDO3
+    internal: true
   - platform: template
     id: sleep_toggle
     internal: true
@@ -226,6 +215,30 @@ spi:
   clk_pin: GPIO13
   mosi_pin: GPIO15
 
+homeThing:
+  id: homeThingMenu
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    wifi: wifi_connected
+    api: api_connected
+  display_state:
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+    draw_now_playing_bottom_menu: True
+
 display:
   - platform: st7789v
     model: TTGO_TDisplay_135x240
@@ -236,11 +249,11 @@ display:
     rotation: 0
     update_interval: 3600s
     lambda: |-
-      if (idleTime < 0) {
-        ESP_LOGD("drawing menu", "turning on");
-        id(backlight).turn_on();
-        idleTime = 0;
-      }
+      // if (idleTime < 0) {
+      //   ESP_LOGD("drawing menu", "turning on");
+      //   id(backlight).turn_on();
+      //   idleTime = 0;
+      // }
 
-      draw_menu_screen();
+      id(homeThingMenu)->draw_menu_screen();
       return;
