--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -1,15 +1,5 @@
 esphome:
   name: m5stickc
-  includes:
-    - homeThing/MenuGlobals.h
-    - homeThing/MenuTitle.h
-    - homeThing/FriendlyNameEntity.h
-    - homeThing/TextHelpers.h
-    - homeThing/DisplayUpdateInterface.h
-    - homeThing/esphomeRemote.h
-    - homeThing/esphomeRemoteNowPlayingMenu.h
-    - homeThing/esphomeRemote2Button.h
-    - homeThing/esphomeRemoteCommon.h
 
 esp32:
   board: m5stick-c
@@ -93,9 +83,9 @@ sensor:
    on_value :
      then:
        - lambda: |-
-           if(idleTime < 2) {
-             displayUpdate.updateDisplay(true);
-           }
+          //  if(idleTime < 2) {
+          //    displayUpdate.updateDisplay(true);
+          //  }
 # internal LED
 light:
  - platform: homeassistant_light_group
