--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -3,54 +3,81 @@ esphome:
   platform: ESP32
   board: m5stack-fire
 
-substitutions:
-  boot_name: '"Fire Remote <3"'
-  boot_logo_size: "48"
-  friendly_name: "M5Fire Remote"
-  wifi_ssid: !secret wifi_ssid
-  wifi_password: !secret wifi_password
-  wifi_fallback_password: !secret wifi_fallback_password
-  large_font_size: "24"
-  medium_font_size: "20"
-  small_font_size: "18"
-  icon_size: "24"
-  icon_size_large: "28"
-  header_height: "24"
-  margin_size: "8"
-  slider_margin_size: "6"
-  scroll_bar_width: "8"
-  bottom_bar_margin: "8"
-  now_playing_max_lines: "5"
-  draw_now_playing_menu: "true"
-  draw_battery_level: "true"
-  dark_mode: "true"
-  draw_volume_level: "false"
-  draw_shuffle_disabled: "false"
-  draw_header_time: "true"
-  color_accent_primary_red: 86%
-  color_accent_primary_green: 10%
-  color_accent_primary_blue: 20%
-  display_timeout: "16"
-  sleep_after: "7200"
-  menu_rollover_on: "false"
-  sync_active_player: "true"
-  dec_brightness_step: "10"
-  inc_brightness_step: "10"
-  dec_color_temperature_step: "10"
-  inc_color_temperature_step: "10"
-  keep_states_in_sync: "false"
-
-<<: !include homeThing/sharedRemoteConfig.yaml
+packages:
+  device_base: !include common/device_base.yaml
+  
+font:
+  ## Font needs to be monospace!
+    - file: "fonts/iosevka-heavy.ttf"
+      id: large_heavy_font
+      size: 24
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: large_font
+      size: 24
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: medium_font
+      size: 20
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: small_font
+      size: 18
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: 'fonts/homeThingFontLogo.ttf' 
+      id: home_thing_logo
+      size: 48
+      glyphs: [
+        '',
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_large
+      size: 28
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_small
+      size: 24
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]
 
 external_components:
-  - <<: !include homeThing/sharedExternalComponents.yaml
   - source:
       type: git
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
-
-text_sensor:
-  !include homeThing/sharedTextSensors.yaml
 
 i2c:
   sda: 21
@@ -100,17 +127,11 @@ ip5306:
         - lambda: ESP_LOGD("TEST", "still charging");
 
 deep_sleep:
-  id: deep_sleep_fire
+  id: deep_sleep_
   wakeup_pin: 39
   wakeup_pin_mode: INVERT_WAKEUP
 
 binary_sensor:
-  - platform: status
-    id: api_connected
-    internal: true
-  - platform: template
-    id: wifi_connected
-    internal: true
   - platform: gpio
     id: M5_BtnA
     pin:
@@ -141,7 +162,6 @@ binary_sensor:
 
 # We can still control the backlight independently
 switch:
-  - <<: !include homeThing/sharedSwitches.yaml
   - platform: template
     name: ${friendly_name} Sleep Toggle
     id: sleep_toggle
@@ -149,7 +169,7 @@ switch:
     on_turn_on:
       then:
         - deep_sleep.enter:
-            id: deep_sleep_fire
+            id: deep_sleep_
   - platform: gpio
     pin: 32
     name: ${friendly_name} Backlight
@@ -172,26 +192,6 @@ light:
           name: Rainbow Effect
           speed: 20
           width: 15
-  - platform: homeassistant_light_group
-    id: light_bathroom_lights
-    entity_id: light.bathroom_lights
-    name: Bathroom 
-  - platform: homeassistant_light_group
-    id: light_bedroom_lights
-    entity_id: light.bedroom_lights
-    name: Bedroom 
-  - platform: homeassistant_light_group
-    id: light_kitchen_lights
-    entity_id: light.kitchen_lights
-    name: Kitchen 
-  - platform: homeassistant_light_group
-    id: light_living_room_lights
-    entity_id: light.living_room_lights
-    name: Living Room 
-  - platform: homeassistant_light_group
-    id: light_office_lamp
-    entity_id: light.office_lamp
-    name: Office Lamp
 
 spi:
   clk_pin: 18
@@ -212,7 +212,6 @@ homeThing:
     then:
       component.update: my_display
   boot:
-    wifi: wifi_connected
     api: api_connected
   display_state:
     font_small: small_font
@@ -222,11 +221,6 @@ homeThing:
     font_material_large: material_font_large
     font_material_small: material_font_small
     font_logo: home_thing_logo
-    # large_font_size: "24"
-    # medium_font_size: "20"
-    # small_font_size: "18"
-    # icon_size: "24"
-    # icon_size_large: "28"
     header_height: 24
     margin_size: 8
     slider_margin_size: 6
