--- a/m5stickc.yaml
+++ b/m5stickc.yaml
@@ -6,44 +6,8 @@ esp32:
   framework:
     type: arduino
 
-substitutions:
-  boot_name: '"M5Stick Remote <3"'
-  boot_logo_size: "48"
-  friendly_name: M5stickcRemote
-  wifi_ssid: !secret wifi_ssid
-  wifi_password: !secret wifi_password
-  wifi_fallback_password: !secret wifi_fallback_password
-  large_font_size: "20"
-  medium_font_size: "14"
-  small_font_size: "12"
-  icon_size: "18"
-  icon_size_large: "19"
-  header_height: "16"
-  margin_size: "4"
-  slider_margin_size: "6"
-  scroll_bar_width: "6"
-  bottom_bar_margin: "32"
-  now_playing_max_lines: "8"
-  draw_now_playing_menu: "true"
-  draw_battery_level: "true"
-  draw_volume_level: "false"
-  draw_shuffle_disabled: "false"
-  draw_header_time: "false"
-  color_accent_primary_red: 63%
-  color_accent_primary_green: 13%
-  color_accent_primary_blue: 94%
-  display_timeout: "16"
-  sleep_after: "7200"
-  menu_rollover_on: "false"
-  sync_active_player: "true"
-  dec_brightness_step: "10"
-  inc_brightness_step: "10"
-  dec_color_temperature_step: "10"
-  inc_color_temperature_step: "10"
-  dark_mode: "true"
-  keep_states_in_sync: "false"
-
-<<: !include homeThing/sharedRemoteConfig.yaml
+packages:
+  device_base: !include common/device_base.yaml
 
 i2c:
   - id: bus_a
@@ -57,7 +21,73 @@ external_components:
      url: https://gitlab.com/geiseri/esphome_extras.git
    refresh: 0s
    components: [axp192]
- - <<: !include homeThing/sharedExternalComponents.yaml
+
+font:
+## Font needs to be monospace!
+  - file: "fonts/iosevka-heavy.ttf"
+    id: large_heavy_font
+    size: 24
+    glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+  - file: "fonts/iosevka.ttf"
+    id: large_font
+    size: 24
+    glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+  - file: "fonts/iosevka.ttf"
+    id: medium_font
+    size: 15
+    glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+  - file: "fonts/iosevka.ttf"
+    id: small_font
+    size: 14
+    glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+  - file: 'fonts/homeThingFontLogo.ttf' 
+    id: home_thing_logo
+    size: 48
+    glyphs: [
+      '',
+    ]  
+  - file: 'fonts/materialdesignicons-webfont.ttf' 
+    id: material_font_large
+    size: 19
+    glyphs: [
+      '󰐊', # mdi-play
+      '󰓛', # mdi-stop
+      '󰏤', # home-pause
+      '󰽥', # mdi-moon-waning-crescent
+      '󰒝', # mdi-shuffle
+      '󰒞', # mdi-shuffle-disabled
+      '󰕾', # mdi-volume-high
+      '󰕿', # mdi-volume-low
+      '󰚺', # mdi-plex
+      '󰝆', # mdi-netflix
+      '󰗃', # mdi-youtube
+      '󰓇', # mdi-spotify
+      '󰔂', # mdi-television
+      '󰋜', # mdi-home
+      '󰌵', # mdi-lightbulb
+      '󰌶', # mdi-lightbulb-outline
+    ]  
+  - file: 'fonts/materialdesignicons-webfont.ttf' 
+    id: material_font_small
+    size: 18
+    glyphs: [
+      '󰐊', # mdi-play
+      '󰓛', # mdi-stop
+      '󰏤', # home-pause
+      '󰽥', # mdi-moon-waning-crescent
+      '󰒝', # mdi-shuffle
+      '󰒞', # mdi-shuffle-disabled
+      '󰕾', # mdi-volume-high
+      '󰕿', # mdi-volume-low
+      '󰚺', # mdi-plex
+      '󰝆', # mdi-netflix
+      '󰗃', # mdi-youtube
+      '󰓇', # mdi-spotify
+      '󰔂', # mdi-television
+      '󰋜', # mdi-home
+      '󰌵', # mdi-lightbulb
+      '󰌶', # mdi-lightbulb-outline
+    ]
 
 axp192:
  id: axp
@@ -67,47 +97,15 @@ axp192:
  dcdc1_voltage: 3300mv
  dcdc3_voltage: 1.5V
 
-text_sensor:
- !include homeThing/sharedTextSensors.yaml
-
 sensor:
    # AXP192 power management - must be present to initialize TFT power on
  - platform: axp192
    axp192_id: axp
    id: batteryPercent
    type: battery_power
- - platform: template
-   id: display_update_tick
-   filters:
-     - debounce: 0.02s
-   on_value :
-     then:
-       - lambda: |-
-          //  if(idleTime < 2) {
-          //    displayUpdate.updateDisplay(true);
-          //  }
+
 # internal LED
 light:
- - platform: homeassistant_light_group
-   id: light_bathroom_lights
-   entity_id: light.bathroom_lights
-   name: Bathroom 
- - platform: homeassistant_light_group
-   id: light_bedroom_lights
-   entity_id: light.bedroom_lights
-   name: Bedroom 
- - platform: homeassistant_light_group
-   id: light_kitchen_lights
-   entity_id: light.kitchen_lights
-   name: Kitchen 
- - platform: homeassistant_light_group
-   id: light_living_room_lights
-   entity_id: light.living_room_lights
-   name: Living Room 
- - platform: homeassistant_light_group
-   id: light_office_lamp
-   entity_id: light.office_lamp
-   name: Office Lamp
  - platform: monochromatic
    output:  builtin_led
    name: Led
@@ -139,7 +137,7 @@ binary_sensor:
    on_state:
      then:
        lambda: |-
-         charging = x;
+        //  charging = x;
  - platform: gpio
    pin:
      number: GPIO37
@@ -148,7 +146,7 @@ binary_sensor:
    on_press:
      then:
        lambda: |-
-           buttonPressRight();
+           id(homeThingMenu)->buttonPressRight();
            auto call = id(led1).turn_on();
            call.set_transition_length(0);
            call.perform();
@@ -164,7 +162,7 @@ binary_sensor:
    on_press:
      then:
        lambda: |-
-           buttonPressSelect();
+           id(homeThingMenu)->buttonPressSelect();
            auto call = id(led1).turn_on();
            call.set_transition_length(0);
            call.perform();
@@ -173,48 +171,67 @@ binary_sensor:
        - light.turn_off: led1
 
 deep_sleep:
- id: deep_sleep_m5
+ id: deep_sleep_
  wakeup_pin: 37
  wakeup_pin_mode: INVERT_WAKEUP
 
- switch:
-  - platform: homeassistant_switch_group
-    entity_id: "switch.oven_fan"
-    name: "Oven Fan"
-    id: oven_fan_switch
-  - platform: axp192
-    axp192_id: axp
-    output: ldo3
-    name: LDO3
-  - platform: template
-    id: sleep_toggle
-    internal: true
-    optimistic: true
-    on_turn_on:
-      then:
-        - light.turn_off:
-            id: axpbacklight
-            transition_length: 0s
-        - delay: 0.5s
-        - deep_sleep.enter:
-            id: deep_sleep_m5
-  - platform: template
-    id: backlight
-    optimistic: true
-    internal: true
-    on_turn_on:
-      then:
-        - light.turn_on:
-            id: axpbacklight
-    on_turn_off:
-      then:
-        - light.turn_off:
-            id: axpbacklight
-            transition_length: 0.5s
+switch:
+- platform: axp192
+  axp192_id: axp
+  output: ldo3
+  name: LDO3
+- platform: template
+  id: sleep_toggle
+  internal: true
+  optimistic: true
+  on_turn_on:
+    then:
+      - light.turn_off:
+          id: axpbacklight
+          transition_length: 0s
+      - delay: 0.5s
+      - deep_sleep.enter:
+          id: deep_sleep_
+- platform: template
+  id: backlight
+  optimistic: true
+  internal: true
+  on_turn_on:
+    then:
+      - light.turn_on:
+          id: axpbacklight
+  on_turn_off:
+    then:
+      - light.turn_off:
+          id: axpbacklight
+          transition_length: 0.5s
 
 spi:
   clk_pin: GPIO13
   mosi_pin: GPIO15
+
+homeThing:
+  id: homeThingMenu
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    api: api_connected
+  display_state:
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+    draw_now_playing_bottom_menu: True
 
 display:
   - platform: st7735
@@ -231,11 +248,5 @@ display:
     eight_bit_color: true
     update_interval: 3600s    
     lambda: |-
-      if (idleTime < 0) {
-        ESP_LOGD("drawing menu", "turning on");
-        id(backlight).turn_on();
-        idleTime = 0;
-      }
-
-      draw_menu_screen();
+      id(homeThingMenu)->draw_menu_screen();
       return;
