--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -2,57 +2,81 @@ esphome:
   name: lilygo_display
   platform: ESP32
   board: featheresp32
-  includes:
-    - homeThing/esphomeRemoteRotary.h
-    - homeThing/esphomeRemoteCommon.h
 
-substitutions:
-  boot_name: '"TDisplay Remote <3"'
-  boot_logo_size: "48"
-  friendly_name: "TDisplay Remote"
-  wifi_ssid: !secret wifi_ssid
-  wifi_password: !secret wifi_password
-  wifi_fallback_password: !secret wifi_fallback_password
-  large_font_size: "24"
-  medium_font_size: "15"
-  small_font_size: "14"
-  icon_size: "18"
-  icon_size_large: "19"
-  header_height: "16"
-  margin_size: "4"
-  slider_margin_size: "6"
-  scroll_bar_width: "6"
-  bottom_bar_margin: "1"
-  now_playing_max_lines: "5"
-  draw_now_playing_menu: "false"
-  draw_battery_level: "true"
-  draw_volume_level: "false"
-  draw_shuffle_disabled: "false"
-  draw_header_time: "true"
-  color_accent_primary_red: 0%
-  color_accent_primary_green: 45%
-  color_accent_primary_blue: 68%
-  display_timeout: "16"
-  sleep_after: "7200"
-  menu_rollover_on: "false"
-  sync_active_player: "true"
-  dec_brightness_step: "10"
-  inc_brightness_step: "10"
-  dec_color_temperature_step: "10"
-  inc_color_temperature_step: "10"
-  dark_mode: "true"
-  keep_states_in_sync: "false"
+packages:
+  device_base: !include common/device_base.yaml
 
-<<: !include homeThing/sharedRemoteConfig.yaml
+font:
+  ## Font needs to be monospace!
+    - file: "fonts/iosevka-heavy.ttf"
+      id: large_heavy_font
+      size: 24
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: large_font
+      size: 24
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: medium_font
+      size: 15
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: small_font
+      size: 14
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: 'fonts/homeThingFontLogo.ttf' 
+      id: home_thing_logo
+      size: 48
+      glyphs: [
+        '',
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_large
+      size: 19
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_small
+      size: 18
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]
 
-external_components:
-  - <<: !include homeThing/sharedExternalComponents.yaml
-
-light:
-  !include homeThing/sharedLights.yaml
+deep_sleep:
+  id: deep_sleep_
 
 sensor:
-## Rotary
   - platform: rotary_encoder
     filters:
     - throttle: 0.01s
@@ -71,23 +95,12 @@ sensor:
     id: rotary
     on_clockwise:
       - lambda: |-
-          buttonPressWakeUpDisplay();
-          rotaryScrollClockwise();
+          id(homeThingMenu)->buttonPressWakeUpDisplay();
+          id(homeThingMenu)->rotaryScrollClockwise(id(rotary).state);
     on_anticlockwise:
       - lambda: |-
-          buttonPressWakeUpDisplay();
-          rotaryScrollCounterClockwise();
-
-## Needed to debounce screen updates for rotary. 17ms is close to 60fps for st7789v
-  - platform: template
-    id: display_update_tick
-    filters:
-      - debounce: 17ms
-    on_value :
-      then:
-        - lambda: |-
-            displayUpdateDebounced();
-          
+          id(homeThingMenu)->buttonPressWakeUpDisplay();
+          id(homeThingMenu)->rotaryScrollCounterClockwise(id(rotary).state);
 ## Battery
   - platform: adc
     pin: 34
@@ -99,16 +112,16 @@ sensor:
     on_value:
       then:
         lambda: |-
-          if (id(vcc_adc).state > 2.23) {
-            if (charging == false) {
-              charging = true;
-            }
-          } else {
-            if (charging == true) {
-              charging = false;
-            }
-          }
-          id(vcc_adc_avg).publish_state(id(vcc_adc).state);
+          // if (id(vcc_adc).state > 2.23) {
+          //   if (charging == false) {
+          //     charging = true;
+          //   }
+          // } else {
+          //   if (charging == true) {
+          //     charging = false;
+          //   }
+          // }
+          // id(vcc_adc_avg).publish_state(id(vcc_adc).state);
   - platform: template
     id: vcc_adc_avg
     filters:
@@ -139,7 +152,7 @@ sensor:
       then:
         lambda: |-
           ESP_LOGE("SLEEP", "Low Power Supply %.3fV! Sleeping to protect battery", id(batteryPercent).state);
-          id(sleep_toggle).turn_on();
+          // id(sleep_toggle).turn_on();
 
 binary_sensor:
   - platform: gpio
@@ -155,12 +168,11 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressScreenLeft();
+          id(homeThingMenu)->buttonPressScreenLeft();
     on_release:
       then:
       - lambda: |-
-          buttonReleaseScreenLeft();
-    
+          id(homeThingMenu)->buttonReleaseScreenLeft();
   - platform: gpio
     pin:
       number: GPIO35
@@ -171,9 +183,7 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressScreenRight();
-          
-## Rotary buttons
+          id(homeThingMenu)->buttonPressScreenRight();
   - platform: gpio
     internal: true
     pin:
@@ -186,7 +196,7 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressLeft();
+          id(homeThingMenu)->buttonPressLeft();
   - platform: gpio
     internal: true
     pin:
@@ -199,7 +209,7 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressUp();
+          id(homeThingMenu)->buttonPressUp();
   - platform: gpio
     internal: true
     pin:
@@ -212,7 +222,7 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressRight();
+          id(homeThingMenu)->buttonPressRight();
   - platform: gpio
     internal: true
     pin:
@@ -225,7 +235,7 @@ binary_sensor:
     on_press:
       then:
       - lambda: |-
-          buttonPressDown();
+          id(homeThingMenu)->buttonPressDown();
   - platform: gpio
     internal: true
     pin:
@@ -240,24 +250,15 @@ binary_sensor:
       max_length: 350ms
       then:
       - lambda: |-
-          buttonPressSelect();
+          id(homeThingMenu)->buttonPressSelect();
     on_multi_click:
     - timing:
         - ON for at least 0.5s
       then:
       - lambda: |-
-          buttonPressSelectHold();
+          id(homeThingMenu)->buttonPressSelectHold();
 
 switch:
-  - <<: !include homeThing/sharedSwitches.yaml
-  - platform: template
-    name: Sleep Toggle
-    id: sleep_toggle
-    optimistic: true
-    on_turn_on:
-      then:
-        - deep_sleep.enter:
-            id: deep_sleep_1
   - platform: gpio
     pin:
       number: 27
@@ -270,6 +271,14 @@ switch:
       inverted: false
     id: coma
     internal: true
+  - platform: template
+    name: Sleep Toggle
+    id: sleep_toggle
+    optimistic: true
+    on_turn_on:
+      then:
+        - deep_sleep.enter:
+            id: deep_sleep_
   - platform: gpio
     pin: GPIO4
     name: "Backlight"
@@ -281,6 +290,29 @@ spi:
   clk_pin: GPIO18
   mosi_pin: GPIO19
 
+homeThing:
+  id: homeThingMenu
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    api: api_connected
+  display_state:
+    draw_battery_level: false
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+
 display:
   - platform: st7789v
     model: TTGO_TDisplay_135x240
@@ -290,14 +322,8 @@ display:
     dc_pin: GPIO16
     reset_pin: GPIO23
     rotation: 90
-    update_interval: 3600s
+    update_interval: 10s
     lambda: |-
-      if (idleTime < 0) {
-        ESP_LOGD("drawing menu", "turning on");
-        id(backlight).turn_on();
-        idleTime = 0;
-      }
-
-      draw_menu_screen();
+      id(homeThingMenu)->draw_menu_screen();
       return;
-      
+
