--- a/tdisplayt4.yaml
+++ b/tdisplayt4.yaml
@@ -6,62 +6,77 @@ esp32:
   framework:
     type: arduino
 
-substitutions:
-  boot_name: '"Kitchen Remote <3"'
-  boot_logo_size: "64"
-  friendly_name: "Kitchen Remote"
-  wifi_ssid: !secret wifi_ssid
-  wifi_password: !secret wifi_password
-  wifi_fallback_password: !secret wifi_fallback_password
-  large_font_size: "24"
-  medium_font_size: "20"
-  small_font_size: "18"
-  icon_size: "24"
-  icon_size_large: "28"
-  header_height: "24"
-  margin_size: "8"
-  slider_margin_size: "6"
-  scroll_bar_width: "8"
-  bottom_bar_margin: "8"
-  now_playing_max_lines: "10"
-  draw_now_playing_menu: "true"
-  draw_battery_level: "false"
-  draw_volume_level: "false"
-  draw_shuffle_disabled: "false"
-  draw_header_time: "true"
-  color_accent_primary_red: 63%
-  color_accent_primary_green: 13%
-  color_accent_primary_blue: 94%
-  display_timeout: "16"
-  sleep_after: "7200"
-  menu_rollover_on: "false"
-  sync_active_player: "true"
-  dec_brightness_step: "10"
-  inc_brightness_step: "10"
-  dec_color_temperature_step: "10"
-  inc_color_temperature_step: "10"
-  dark_mode: "true"
-  keep_states_in_sync: "true"
-
-<<: !include homeThing/sharedRemoteConfig.yaml
-
-external_components:
-  - <<: !include homeThing/sharedExternalComponents.yaml
+packages:
+  device_base: !include common/device_base.yaml
   
-light:
-  !include homeThing/sharedLights.yaml
+font:
+  ## Font needs to be monospace!
+    - file: "fonts/iosevka-heavy.ttf"
+      id: large_heavy_font
+      size: 24
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: large_font
+      size: 22
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: medium_font
+      size: 20
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: "fonts/iosevka.ttf"
+      id: small_font
+      size: 18
+      glyphs: '^…*/|\$#<>!?"%()[]+=,-_.:°0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz&êÊîÎâÂôÔéÉíÍáÁóÓëËüÜïÏöÖøØṣṢñãõÑÃÕ''’'
+    - file: 'fonts/homeThingFontLogo.ttf' 
+      id: home_thing_logo
+      size: 64
+      glyphs: [
+        '',
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_large
+      size: 28
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]  
+    - file: 'fonts/materialdesignicons-webfont.ttf' 
+      id: material_font_small
+      size: 24
+      glyphs: [
+        '󰐊', # mdi-play
+        '󰓛', # mdi-stop
+        '󰏤', # home-pause
+        '󰽥', # mdi-moon-waning-crescent
+        '󰒝', # mdi-shuffle
+        '󰒞', # mdi-shuffle-disabled
+        '󰕾', # mdi-volume-high
+        '󰕿', # mdi-volume-low
+        '󰚺', # mdi-plex
+        '󰝆', # mdi-netflix
+        '󰗃', # mdi-youtube
+        '󰓇', # mdi-spotify
+        '󰔂', # mdi-television
+        '󰋜', # mdi-home
+        '󰌵', # mdi-lightbulb
+        '󰌶', # mdi-lightbulb-outline
+      ]
 
 sensor:
-  - platform: template
-    id: display_update_tick
-    filters:
-      - debounce: 0.02s
-    on_value :
-      then:
-        - lambda: |-
-            if(idleTime < 2) {
-              displayUpdate.updateDisplay(true);
-            }
   - platform: template
     name: Battery Percent
     id: batteryPercent
@@ -76,7 +91,7 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressLeft();
+            id(homeThingMenu)->rotaryScrollCounterClockwise(0);
   - platform: gpio
     id: T4_BtnB
     pin:
@@ -85,7 +100,7 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressSelect();
+            id(homeThingMenu)->buttonPressSelect();
   - platform: gpio
     id: T4_BtnC
     pin:
@@ -94,11 +109,10 @@ binary_sensor:
     on_click:
       then:
         - lambda: |-
-            buttonPressRight();
+            id(homeThingMenu)->rotaryScrollClockwise(0);
 
 # We can still control the backlight independently
 switch:
-  - <<: !include homeThing/sharedSwitches.yaml
   - platform: gpio
     pin:
       number: 27
@@ -117,24 +131,48 @@ switch:
     id: backlight
     internal: true
     restore_mode: RESTORE_DEFAULT_ON
-  - platform: template
-    name: Sleep Toggle
-    id: sleep_toggle
-    optimistic: true
-    internal: true
-    on_turn_on:
-      then:
-        - deep_sleep.enter:
-            id: deep_sleep_1
-
-time:
-  - platform: homeassistant
-    id: esptime
 
 spi:
   clk_pin: 18
   miso_pin: 12
   mosi_pin: 23
+
+homeThing:
+  id: homeThingMenu
+  settings:
+    mode: 3_button
+  media_players: media_group_component
+  lights: light_group_component
+  services: service_group_component
+  sensors: sensor_group_component
+  switches: switch_group_component
+  display: my_display
+  on_redraw:
+    then:
+      component.update: my_display
+  boot:
+    wifi: wifi_connected
+    api: api_connected
+  display_state:
+    font_small: small_font
+    font_medium: medium_font
+    font_large: large_font
+    font_large_heavy: large_heavy_font
+    font_material_large: material_font_large
+    font_material_small: material_font_small
+    font_logo: home_thing_logo
+    header_height: 24
+    margin_size: 8
+    slider_margin_size: 6
+    scroll_bar_width: 8
+    bottom_bar_margin: 8
+    now_playing_max_lines: 10
+    draw_now_playing_bottom_menu: true
+    draw_battery_level: false
+    dark_mode: true
+    draw_volume_level: false
+    draw_shuffle_disabled: false
+    draw_header_time: true
 
 display:
   - platform: ili9341
@@ -147,14 +185,5 @@ display:
     update_interval: 3600s
     rotation: 90
     lambda: |-
-      if (idleTime < 0) {
-        ESP_LOGD("drawing menu", "turning on");
-        id(backlight).turn_on();
-        idleTime = 0;
-      } else if (!id(backlight).state) {
-        ESP_LOGD("drawing menu", "turning off %d", idleTime);
-        return;
-      }
-      charging = true;
-      draw_menu_screen();
+      id(homeThingMenu)->draw_menu_screen();
       return;
