--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -112,16 +112,18 @@ sensor:
     on_value:
       then:
         lambda: |-
-          // if (id(vcc_adc).state > 2.23) {
-          //   if (charging == false) {
-          //     charging = true;
-          //   }
-          // } else {
-          //   if (charging == true) {
-          //     charging = false;
-          //   }
-          // }
-          // id(vcc_adc_avg).publish_state(id(vcc_adc).state);
+          if (!id(charging)->has_state()) {
+              id(charging)->publish_state(false);
+          } else if (id(vcc_adc).state > 2.23) {
+            if (!id(charging).state) {
+              id(charging)->publish_state(true);
+            }
+          } else {
+            if (id(charging).state) {
+              id(charging)->publish_state(false);
+            }
+          }
+          id(vcc_adc_avg).publish_state(id(vcc_adc).state);
   - platform: template
     id: vcc_adc_avg
     filters:
@@ -141,20 +143,22 @@ sensor:
     on_value :
       then:
         - sensor.template.publish:
-            id: batteryPercent
+            id: battery_percent
             state: !lambda 'return (id(batteryVoltage).state * 118) - 162;'
   - platform: template
     name: Battery Percent
-    id: batteryPercent
+    id: battery_percent
     unit_of_measurement: '%'
     on_value_range:
       below: 5
       then:
         lambda: |-
-          ESP_LOGE("SLEEP", "Low Power Supply %.3fV! Sleeping to protect battery", id(batteryPercent).state);
-          // id(sleep_toggle).turn_on();
+          ESP_LOGE("SLEEP", "Low Power Supply %.3fV! Sleeping to protect battery", id(battery_percent).state);
+          id(sleep_toggle).turn_on();
 
 binary_sensor:
+  - platform: template
+    id: charging
   - platform: gpio
     pin:
       number: GPIO0
@@ -292,6 +296,11 @@ spi:
 
 homeThing:
   id: homeThingMenu
+  sleep_switch: sleep_toggle
+  backlight: backlight
+  battery:
+    battery_percent: battery_percent
+    charging: charging
   media_players: media_group_component
   lights: light_group_component
   services: service_group_component
@@ -304,7 +313,7 @@ homeThing:
   boot:
     api: api_connected
   display_state:
-    draw_battery_level: false
+    draw_battery_level: true
     font_small: small_font
     font_medium: medium_font
     font_large: large_font
