--- a/fireremote.yaml
+++ b/fireremote.yaml
@@ -228,7 +228,7 @@ homeThing:
     bottom_bar_margin: 8
     now_playing_max_lines: 5
     draw_now_playing_bottom_menu: true
-    draw_battery_level: false
+    draw_battery_level: true
     dark_mode: true
     draw_volume_level: false
     draw_shuffle_disabled: false
