--- a/tdisplayremote.yaml
+++ b/tdisplayremote.yaml
@@ -301,17 +301,15 @@ homeThing:
   battery:
     battery_percent: battery_percent
     charging: charging
-  media_players: media_group_component
-  lights: light_group_component
-  services: service_group_component
-  sensors: sensor_group_component
-  switches: switch_group_component
+  media_player_group: media_group_component
+  light_group: light_group_component
+  service_group: service_group_component
+  sensor_group: sensor_group_component
+  switch_group: switch_group_component
   display: my_display
   on_redraw:
     then:
       component.update: my_display
-  boot:
-    api: api_connected
   display_state:
     draw_battery_level: true
     font_small: small_font
